<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/title_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:text="@string/title_reset"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/title_reset">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textStyle="normal|bold"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="textStart" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/mobileNumber"
                android:layout_weight="1"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textStyle="normal|bold"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="textStart" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_oldPswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/oldPassword"
                android:layout_weight="1"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal|bold"
            android:textAlignment="textStart" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_newPswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/newPassword"
                android:layout_weight="1" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textStyle="normal|bold"
            android:textColor="@color/colorPrimaryDark" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_confirmPswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/confirmPassword"
                android:layout_weight="1" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:text="@string/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/submitBtn"
            android:background="@color/colorAccent"
            android:textStyle="normal|bold"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>