<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/mobile"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/input1"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_password"
        android:gravity="center">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/button_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signInBtn"
        android:background="@color/colorAccent"
        android:layout_below="@+id/input2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:textStyle="normal|bold"
        android:textColor="@android:color/white" />

    <Button
        android:text="@string/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset"
        android:background="@android:color/transparent"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/signInBtn"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/imageView3"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/reset"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/line"
        android:layout_marginTop="14dp" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/button_fb_sign_in"
        android:text="Connect with Facebook"
        android:textColor="@color/icons"
        android:fontFamily="sans-serif-black"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="#565fa0"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/imageView3"/>

    <com.google.android.gms.common.SignInButton
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/btn_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/button_fb_sign_in"/>


</RelativeLayout>